Initial commit of Donate Project

--- a/app/src/main/res/layout/activity_donate.xml
+++ b/app/src/main/res/layout/activity_donate.xml
@@ -10,13 +10,16 @@
 
     <Button
         android:id="@+id/donate50"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:text="@string/donate50"
-        android:layout_gravity="center"
+        android:background="@android:color/holo_green_light"
         android:onClick="onDonate"
+        android:text="@string/donate50"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -26,11 +29,14 @@
         android:id="@+id/donate100"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@android:color/holo_green_light"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_marginTop="8dp"
+        android:layout_gravity="center"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:text="@string/donate100"
-        android:layout_gravity="center"
         android:onClick="onDonate"
+        android:text="@string/donate100"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -41,6 +47,9 @@
         android:id="@+id/donate200"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@android:color/holo_green_light"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/donate200"
