--- a/app/src/main/res/layout/activity_charity.xml
+++ b/app/src/main/res/layout/activity_charity.xml
@@ -12,6 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:orientation="vertical"
         android:padding="16dp">
 
@@ -26,18 +27,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/charity_text" />
+            android:text="@string/charity_text"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/charity_button"
-            android:layout_width="wrap_content"
+            style="@android:style/Widget.Button"
+            android:layout_width="195dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="16dp"
+            android:background="@android:color/holo_green_light"
+            android:elevation="0dp"
             android:onClick="charitySelected"
             android:text="@string/charity_button"
+            android:textAppearance="@style/TextAppearance.AppCompat.Button"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
