--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#000099</color>
+    <color name="colorPrimaryDark">#2136f3</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="backgroundColor">#ffffff</color>
+    <color name="white">#ffffff</color>
 </resources>
