Adding Charity Database table and assigning transactions to their specific transactions.

--- a/app/src/main/res/layout/activity_charity.xml
+++ b/app/src/main/res/layout/activity_charity.xml
@@ -33,9 +33,9 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/charity_button"
+            android:id="@+id/charity_cancer_research"
             style="@android:style/Widget.Button"
-            android:layout_width="195dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="8dp"
@@ -44,7 +44,27 @@
             android:background="@android:color/holo_green_light"
             android:elevation="0dp"
             android:onClick="charitySelected"
-            android:text="@string/charity_button"
+            android:text="@string/charity_cancer_research"
+            android:textAppearance="@style/TextAppearance.AppCompat.Button"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/charity_homeless_charity"
+            style="@android:style/Widget.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="16dp"
+            android:background="@android:color/holo_green_light"
+            android:elevation="0dp"
+            android:onClick="charitySelected"
+            android:text="@string/charity_homeless_charity"
             android:textAppearance="@style/TextAppearance.AppCompat.Button"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
